# agents-1

./: .env.example  .env.production  .github.workflows.ci-cd.yaml  .github.workflows.quality-gates.yaml  .gitignore  001_add_indexes.py  001_initial_schema.py  01_analyze_repository.py  ACTIVATION_FIXES_GUIDE.md  AGENTS_2_COMPARISON.md  AGENTS_DECISIONS.md  AGENT_BENCHMARKING_README.md  AGENT_COVERAGE_REPORT.md  AGENT_DEPENDENCY_ANALYSIS_DELIVERY_SUMMARY.md  AGENT_DEPENDENCY_ANALYSIS_README.md  AGENT_FIX_IMPLEMENTATION_SUMMARY.md  AGENT_INVENTORY_REPORT.md  AGENT_PERFORMANCE_REPORT.md  AGENT_PERFORMANCE_REPORT_ENHANCED.md  AGENT_SYSTEM_ARCHITECTURE.md  AGENT_SYSTEM_COMPLETION_DELIVERY_SUMMARY.md  AGENT_SYSTEM_COMPLETION_QUICKSTART.md  AGENT_SYSTEM_COMPLETION_README.md  AGENT_SYSTEM_COMPLETION_STRUCTURE.txt  AGENT_SYSTEM_COMPLETION_SUMMARY.md  AGENT_SYSTEM_COMPLETION_TASK.md  AGENT_SYSTEM_FINAL_REPORT.md.old  AGENT_SYSTEM_FIXES_COMPLETION.md  AGENT_TESTING_REPORT.md  ANALYSIS.md  API Gateway Documentation.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  AUDIT_SYSTEM_GUIDE.md  AUDIT_SYSTEM_USAGE.md  AUTOMATED_CLEANUP_GUIDE.md  BENCHMARKING_IMPLEMENTATION_SUMMARY.md  BaseEvent.py  CLEANUP_PHASE1_COMPLETE.md  CODE_OF_CONDUCT.md  (+485 more)
frontend/: .editorconfig  .env.example  .env.production  .env.production.template  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  BACKEND_INTEGRATION_GUIDE.md  CHANGELOG.md  CONFIGURATION_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  EXECUTIVE_SUMMARY.md  FEATURES_AND_FUNCTIONALITY.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SYSTEM_DIAGNOSTICS_REPORT.md  babel.config.js  ci-cd.yml  craco.config.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  jest.config.js  jsconfig.json  lighthouserc.js  manifest.json  netlify.toml  package-lock.json  package.json  playwright.config.js  pyproject.toml  service-worker.js  tailwind.config.js  validate-system.cjs  vercel.json
frontend/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.yml
frontend/.github/ISSUE_TEMPLATE/: README.md  bug-fix-request.yml  code-refactoring.yml  config.yml  feature-request-enhanced.yml  performance-optimization.yml  security-vulnerability.yml  system-analysis.yml  system-issue-automated.yml
frontend/.github/workflows/: ci-cd.yml  ci.yml  code-quality.yml  dependency-updates.yml  deploy.yml  e2e.yml  system-issue-scan.yml
frontend/__mocks__/: fileMock.js  styleMock.js
frontend/docs/: APPLIED_REFACTORING_REPORT.md  AUTHENTICATION_FIX_2025-10-24.md  BUG_FIX_TEMPLATE_GUIDE.md  CONFIG_INDEX.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DIRECTORY_CLEANUP_SUMMARY.md  FEATURE_REQUEST_TEMPLATE_GUIDE.md  FEATURE_REQUEST_TEMPLATE_SUMMARY.md  GITHUB_TEMPLATES_GUIDE.md  HOW_TO_USE_SYSTEM_ANALYSIS_TEMPLATE.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  MONITORING_CHECKLIST.md  OPERATIONS_RUNBOOK.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_3_COMPLETE.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_SECURITY_CONFIG.md  PRODUCTION_SYSTEM_CONFIG.md  QUICK_REFERENCE.md  QUICK_START.md  REFACTORING_EXAMPLES.md  REFACTORING_GUIDE.md  REFACTORING_IMPLEMENTATION_SUMMARY.md  SECURITY_BEST_PRACTICES.md  SECURITY_FIX_2025-10-24.md  SECURITY_IMPLEMENTATION.md  SECURITY_SCANNING.md  SECURITY_SYSTEM_SUMMARY.md  SUMMARY.md  SYSTEM_ANALYSIS_REPORT.md  SYSTEM_ANALYSIS_TEMPLATE_GUIDE.md  SYSTEM_ISSUE_SCANNER.md  SYSTEM_UPGRADE_STRATEGY.md  TEMPLATE_IMPLEMENTATION_GUIDE.md  UAT_GUIDE.md  UPGRADE_CHECKLIST.md  (+5 more)
frontend/e2e/: README.md  app.cy.js  navigation.cy.js  smoke.cy.js
frontend/e2e/accessibility/: a11y.spec.js
frontend/e2e/auth/: login.spec.js
frontend/e2e/dashboard/: dashboard.spec.js
frontend/e2e/features/: agent-visualization.spec.js  features.cy.js  projects.spec.js
frontend/e2e/integration/: api.spec.js  state.spec.js
frontend/e2e/performance/: load-times.spec.js
frontend/e2e/visual/: snapshots.spec.js
frontend/nginx/: nginx.conf
frontend/public/: index.html  robots.txt
frontend/scripts/: build.js  build.sh  commands.js  deploy.sh  dev.sh  e2e.js  health-check.sh  init-pwa.js  optimize-build.js  organize_structure.sh  pre-deploy-check.sh  security-scan.js  smoke-tests.sh  system-issue-scanner.js  validate-env.js  validate-templates.sh  verify-deployment.sh
frontend/scripts/performance/: benchmark.sh
frontend/src/: App.js  index.js  reportWebVitals.js  setupTests.js
frontend/src/components/: AddAgentModal.jsx  AddProjectModal.jsx  AdvancedAnalytics.jsx  AgentCard.jsx  AgentCollaboration.jsx  AgentDetailModal.jsx  AgentNetwork3D.jsx  AgentTrainingInterface.jsx  AudioVisualizer3D.jsx  AuthWrapper.jsx  Dashboard.jsx  (+17 more)
(+482 files in other folders)
